# cambio

./: .env.example  Cargo.toml  README.md  Server.toml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: data.rs  decisions.rs  lib.rs
common/src/event/: client.rs  server.rs
game/: Cargo.toml
game-server/: Cargo.toml
game-server/src/: channels.rs  client.rs  lib.rs  player.rs  state.rs
game-server/src/state/: lobby.rs
game/src/: lib.rs
lobby-server/: Cargo.toml
lobby-server/src/: db.rs  game.rs  id.rs  integration.rs  limiter.rs  main.rs  token.rs
lobby-server/src/middleware/: auth.rs
lobby-server/src/models/: game.rs  user.rs
lobby-server/src/routes/: create.rs  health.rs  join.rs  list.rs  login.rs  mod.rs  refresh.rs  register.rs
router/: Cargo.toml
router/src/: error.rs  lib.rs  log.rs  main.rs
server/: Cargo.toml
server/src/: channels.rs  client.rs  config.rs  connection.rs  disconnect.rs  game.rs  lib.rs  lobby.rs  player.rs  state.rs
server/src/state/: lobby.rs  playing.rs
src/: cli.rs  client.rs  lib.rs  log.rs  main.rs  player.rs  stream.rs
src/server/: config.rs  connection.rs  data.rs  disconnect.rs  event.rs  mod.rs  player.rs
web/: Cargo.toml
