[workspace]
members = ["cli", "client", "game-server", "router", "web"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Joe Loach <joe.gloach@gmail.com>"]
description = "Cambio. A card game"
documentation = "https://github.com/joe-loach/cambio"

[workspace.dependencies]
cli = { path = "cli" }
client = { path = "client" }
common = { path = "common" }
game-server = { path = "game-server" }
router = { path = "router" }
web = { path = "web"}

anyhow = "1.0"
thiserror = "2.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
dialoguer = "0.11"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
itertools = "0.14.0"
parking_lot = "0.12.3"
pico-args = "0.5"
pin-project = "1.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-serde = { version = "0.9", features = ["json"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
dotenvy = "0.15"
