[package]
name = "cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
common = { workspace = true }
client = { workspace = true }
server = { workspace = true }

anyhow = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

pico-args = { workspace = true }