[package]
name = "client"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true


[dependencies]
common = { workspace = true }

futures = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }

tracing = { workspace = true }

serde = { workspace = true }
