[package]
name = "game-server"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
common = { workspace = true }

anyhow = { workspace = true }

rand = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

itertools = { workspace = true }
parking_lot = { workspace = true }

futures = { workspace = true }

tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

tracing = { workspace = true }

uuid = { workspace = true }