[package]
name = "lobby-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }

axum = "0.8"
nanoid = "0.4"

native_db = "0.8.1"
native_model = "0.4.20"