[package]
name = "lobby-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }

axum = "0.8"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

governor = "0.8"
tower_governor = { version = "0.6.0", features = ["tracing"] }

nanoid = "0.4"

dotenvy = "0.15"

# Both versions are tied together
native_db = "0.8.1"
native_model = "0.4.20"

argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9.3"
jiff = "0.2.0"
